updating report html with the new static file

--- a/backend/templates/report.html
+++ b/backend/templates/report.html
@@ -64,6 +64,6 @@
             </div>
         </div>
     </div>
-    <script src="js/report.js"></script>
+    <script src="{{ url_for('static', filename='js/report.js') }}"></script>
 </body>
 </html>
