--- a/backend/templates/Dashboard.html
+++ b/backend/templates/Dashboard.html
@@ -63,6 +63,6 @@
             </div>
         </div>
     </div>
-    <script src="js/dashboard.js"></script>
+    <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 </body>
 </html>
