--- a/backend/templates/track.html
+++ b/backend/templates/track.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
+           <!-- Navigation Bar -->
+           <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Tafuta</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dashboard">Dashboard</a>
+                        </li>
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/report">Report</a>
+                            </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     <div class="container d-flex flex-column align-items-center mt-5">
         <h1 class="text-center mb-4">Tafuta - Number Tracker</h1>
         <form id="track-form" class="col-md-6 col-sm-8 col-10">
