--- a/backend/templates/Dashboard.html
+++ b/backend/templates/Dashboard.html
@@ -9,9 +9,28 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
+           <!-- Navigation Bar -->
+           <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Tafuta</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/tracking">Tracking</a>
+                        </li>
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/report">Report</a>
+                            </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     <div class="container mt-5">
         <h1 class="text-center">Dashboard</h1>
-
         <!-- Filters -->
         <div class="filters mb-4">
             <label for="start-date">Start Date:</label>
