--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -6,6 +6,7 @@
     <title>Welcome to Tafuta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='assets/icons/favicon.ico') }}" type="image/x-icon">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -44,17 +45,17 @@
         <h2 class="text-center mb-4">Our Features</h2>
         <div class="row">
             <div class="col-md-4">
-                <img src="{{ url_for('static', filename='assets/images/image1.jpg') }}" class="img-fluid rounded" alt="Feature 1">
+                <img src="{{ url_for('static', filename='assets/images/taf.webp') }}" class="img-fluid rounded" alt="Feature 1">
                 <h4 class="text-center mt-2">Feature 1</h4>
                 <p class="text-center">Description of the feature.</p>
             </div>
             <div class="col-md-4">
-                <img src="{{ url_for('static', filename='assets/images/image2.jpg') }}" class="img-fluid rounded" alt="Feature 2">
+                <img src="{{ url_for('static', filename='assets/images/tafta.webp') }}" class="img-fluid rounded" alt="Feature 2">
                 <h4 class="text-center mt-2">Feature 2</h4>
                 <p class="text-center">Description of the feature.</p>
             </div>
             <div class="col-md-4">
-                <img src="{{ url_for('static', filename='assets/images/image3.jpg') }}" class="img-fluid rounded" alt="Feature 3">
+                <img src="{{ url_for('static', filename='assets/images/tafuta.webp') }}" class="img-fluid rounded" alt="Feature 3">
                 <h4 class="text-center mt-2">Feature 3</h4>
                 <p class="text-center">Description of the feature.</p>
             </div>
