--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to Tafuta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="icon" href="{{ url_for('static', filename='assets/icons/favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='assets/icon/tafuta.ico') }}" type="image/x-icon">
 </head>
 <body>
     <!-- Navigation Bar -->
