residing the tab

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -46,18 +46,18 @@
         <div class="row">
             <div class="col-md-4">
                 <img src="{{ url_for('static', filename='assets/images/taf.webp') }}" class="img-fluid rounded" alt="Feature 1">
-                <h4 class="text-center mt-2">Feature 1</h4>
+                <h4 class="text-center mt-2">Report</h4>
                 <p class="text-center">Description of the feature.</p>
             </div>
             <div class="col-md-4">
                 <img src="{{ url_for('static', filename='assets/images/tafta.webp') }}" class="img-fluid rounded" alt="Feature 2">
-                <h4 class="text-center mt-2">Feature 2</h4>
-                <p class="text-center">Description of the feature.</p>
+                <h4 class="text-center mt-2">Dashboard</h4>
+                <p class="text-center">The Dashboard features shows how numbers are reports</p>
             </div>
             <div class="col-md-4">
                 <img src="{{ url_for('static', filename='assets/images/tafuta.webp') }}" class="img-fluid rounded" alt="Feature 3">
-                <h4 class="text-center mt-2">Feature 3</h4>
-                <p class="text-center">Description of the feature.</p>
+                <h4 class="text-center mt-2">Tracking</h4>
+                <p class="text-center">Tringulation using networks API help identify the number's origin</p>
             </div>
         </div>
     </div>
