updating nav bar for all pages

--- a/backend/templates/track_map.html
+++ b/backend/templates/track_map.html
@@ -31,11 +31,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/report">Reports</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tracking">tracking</a>
+                    </li>
                 </ul>
-                <div class="d-flex">
-                    <a href="/login" class="btn btn-primary me-2">Login</a>
-                    <a href="/register" class="btn btn-secondary">Register</a>
-                </div>
             </div>
         </div>
     </nav>
