--- a/backend/templates/Dashboard.html
+++ b/backend/templates/Dashboard.html
@@ -25,6 +25,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/report">Report</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/track_map">Map tracking</a>
+                            </li>
                     </ul>
                 </div>
             </div>
