--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/report">Reports</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/track_map">Map tracking</a>
+                    </li>
                 </ul>
                 <div class="d-flex">
                     <a href="/login" class="btn btn-primary me-2">Login</a>
