--- a/backend/templates/track.html
+++ b/backend/templates/track.html
@@ -24,6 +24,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/report">Report</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/trac_map">Map tracking</a>
+                            </li>
                     </ul>
                 </div>
             </div>
