adding track_map routes and updatings nav links

--- a/backend/templates/track.html
+++ b/backend/templates/track.html
@@ -25,7 +25,7 @@
                                 <a class="nav-link" href="/report">Report</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/trac_map">Map tracking</a>
+                                <a class="nav-link" href="/track_map">Map tracking</a>
                             </li>
                     </ul>
                 </div>
