--- a/backend/templates/track_map.html
+++ b/backend/templates/track_map.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/tracking">tracking</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/track_map">Map tracking</a>
+                    </li>
                 </ul>
             </div>
         </div>
