updating the location with Goma as defualt as well as the map focus

--- a/backend/templates/report.html
+++ b/backend/templates/report.html
@@ -25,7 +25,7 @@
                                 <a class="nav-link" href="/tracking">Tracking</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/track_map">Map tracking</a>
+                                <a class="nav-link" href="/track-map">Map tracking</a>
                             </li>
                     </ul>
                 </div>
