--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/report">Reports</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/track_map">Map tracking</a>
+                        <a class="nav-link" href="/track-map">Map tracking</a>
                     </li>
                 </ul>
                 <div class="d-flex">
