--- a/backend/templates/track_map.html
+++ b/backend/templates/track_map.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="/tracking">tracking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/track_map">Map tracking</a>
+                        <a class="nav-link" href="/track-map">Map tracking</a>
                     </li>
                 </ul>
             </div>
